Build CAS indexes in one bulk pass instead of n incremental inserts (#1166)
* Build CAS indexes in one bulk pass instead of n incremental inserts

Creating a CAS index over an already-shredded revision fed every
(value, nodeKey) pair through the HOT trie's incremental-insert path.
That path is built for updates: per entry it descends, decides
merge-vs-branch, and — whenever a structural fold leaves a node
malformed — discharges it with a scoped O(subtree) rebuild. Those
rebuilds do not stay rare as the entry count grows, so index creation
degraded far worse than linearly, and each rebuild also swept the whole
transaction-intent log to release the leaves it orphaned.

Two CAS indexes (title, year) over the 36,273-record movies corpus, on
the same machine and through the same driver:

  before  38.9 s   572 subtree rebuilds, 1,096 self-heals, 1,293 strand
                   rebuilds; 139,834 transaction-intent-log entries
  after    3.8 s   0 rebuilds of any kind; 554 log entries

A bulk load is the right shape for this: the whole entry set is known
before the first byte is written. HOTBulkIndexLoader collects the pairs
into a byte arena, sorts once, folds the node keys sharing a chunk slot
into one Roaring bitmap, and hands the result to HOTBulkBuilder, whose
output is invariant-clean by construction — so nothing ever needs
healing. IndexBuilder gains an IndexBuildFinalizer hook to tell a
builder the traversal is over; the loader only ever replaces an empty
tree, and an index def built over a populated one keeps the incremental
path.

Two more defects on the same path, both found while measuring:

- The builder and the change listener read a value's entire posting
  list back and re-inserted it just to add one node key. A HOT slot
  write is an OR-merge, so the read-back was pure waste — and
  quadratic in how often a value repeats, which is exactly the shape
  of the bulk-comparison corpus. Adding the single node key is enough.

- An equality lookup built its probe 